WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310503
Fix typo in URLParser FilePathStart causing backslash to skip Windows drive letter detection
https://bugs.webkit.org/show_bug.cgi?id=310503
Summary
Fix typo in URLParser FilePathStart causing backslash to skip Windows drive l...
Chris Dumez
Reported
2026-03-22 19:27:55 PDT
Fix typo in URLParser FilePathStart causing backslash to skip Windows drive letter detection.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-22 19:29:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61133
EWS
Comment 2
2026-03-23 00:25:33 PDT
Committed
309737@main
(dbee191016c7): <
https://commits.webkit.org/309737@main
> Reviewed commits have been landed. Closing PR #61133 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-23 00:26:12 PDT
<
rdar://problem/173133532
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug