Fix typo in URLParser FilePathStart causing backslash to skip Windows drive letter detection https://bugs.webkit.org/show_bug.cgi?id=310503

Reviewed by Ryosuke Niwa.

The condition on the FilePathStart state had `*c != '\\'` instead of
`*c == '\\'`, making the block unreachable for backslash characters.
This caused the inner syntax violation check to be dead code and,
more importantly, skipped the Windows drive letter canonicalization
(e.g. normalizing C| to C:) for file URLs with a backslash path
separator after an empty host, such as `file://\C|\path`.

Test: Tools/TestWebKitAPI/Tests/WTF/URLParser.cpp

* Source/WTF/wtf/URLParser.cpp:
(WTF::URLParser::parse):
* Tools/TestWebKitAPI/Tests/WTF/URLParser.cpp:
(TestWebKitAPI::TEST_F(WTF_URLParser, FilePathStartBackslash)):

Canonical link: https://commits.webkit.org/309737@main